@@ -17,6 +17,7 @@
  - The age generation curve in a race's thing definition now determines the
    minimum and maximum age allowed for a starting character. This provides
    better compatibility with the Baby and Children mod.
+ - Shift-click to skip the confirmation dialog when deleting a pawn.
 
  _____________________________________________________________________________
  
